--- a/app/src/main/res/layout/activity_distribusi.xml
+++ b/app/src/main/res/layout/activity_distribusi.xml
@@ -27,31 +27,40 @@
             android:layout_above="@+id/btnDistribusi">
 
             <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/space_40"
+                android:layout_height="wrap_content"
                 android:layout_margin="@dimen/space_10">
 
-                <ui.CustomtextView
-                    font:name="GOTHAM_BOLD"
-                    android:text="Distribusi ke"
-                    android:textColor="@color/white"
+
+                <RelativeLayout
+                    android:gravity="center"
                     android:background="@color/colorSearch"
                     android:layout_width="120dp"
-                    android:layout_height="match_parent"
-                    android:gravity="center" />
+                    android:layout_height="@dimen/space_35">
+
+                    <ui.CustomtextView
+                        android:layout_marginTop="@dimen/space_7"
+                        font:name="GOTHAM_BOLD"
+                        android:text="Distribusi ke"
+                        android:textColor="@color/white"
+
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"/>
+                </RelativeLayout>
+
 
                 <RelativeLayout
                     android:layout_marginLeft="@dimen/space_10"
                     android:background="@drawable/btn_shape_kotak_blue"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
 
-                    <EditText
+                    <ui.CustomEditText
                         android:id="@+id/text_distribusi"
                         android:background="@color/transparant_pure"
-                        android:editable="false"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_toLeftOf="@+id/imgDistribusi"
                         android:layout_toStartOf="@+id/imgDistribusi" />
 
