--- a/app/src/main/res/layout/activity_pdfview_disposisi_distribusi.xml
+++ b/app/src/main/res/layout/activity_pdfview_disposisi_distribusi.xml
@@ -48,6 +48,7 @@
         </RelativeLayout>
 
         <LinearLayout
+            android:visibility="gone"
             android:id="@+id/layout_btnDistribusi"
             android:layout_width="match_parent"
             android:layout_height="40dp"
