--- a/app/src/main/res/layout/activity_pdfview_ditolak_disetujui.xml
+++ b/app/src/main/res/layout/activity_pdfview_ditolak_disetujui.xml
@@ -49,6 +49,7 @@
         </RelativeLayout>
 
         <LinearLayout
+            android:visibility="gone"
             android:id="@+id/btnDistribusi"
             android:layout_width="match_parent"
             android:layout_height="40dp"
