--- a/app/src/main/res/layout/row_bbs_daftar_pesanan.xml
+++ b/app/src/main/res/layout/row_bbs_daftar_pesanan.xml
@@ -91,6 +91,7 @@
                 <ui.CustomtextView
                     font:name="GOTHAM_BOOK"
                     android:id="@+id/lbl_Judul"
+                    android:layout_marginRight="@dimen/space_14"
                     android:text="Tutorial Backup Hapus"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -99,6 +100,7 @@
                     android:layout_alignParentStart="true" />
 
                 <RelativeLayout
+
                     android:id="@+id/layout_attachment"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
