--- a/app/src/main/res/layout/row_persuratan_permohonan.xml
+++ b/app/src/main/res/layout/row_persuratan_permohonan.xml
@@ -258,7 +258,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:gravity="center"
-                        android:text="lihat disposisi"
+                        android:text="lihat surat"
                         android:textColor="@color/white"
                         android:textSize="@dimen/space_9"
                         font:name="GOTHAM_BLACK"
