Add cc dipos, perbaikan info paging

--- a/app/src/main/res/layout/persuratan_pilih_surat_disposisi_distribusi.xml
+++ b/app/src/main/res/layout/persuratan_pilih_surat_disposisi_distribusi.xml
@@ -45,6 +45,7 @@
             android:layout_alignParentBottom="true">
 
             <LinearLayout
+                android:visibility="gone"
                 android:id="@+id/btnDisposisi"
                 android:orientation="horizontal"
                 android:background="@color/colorSelectButton"
