--- a/app/src/main/res/layout/row_disposisi_detail_tertanda.xml
+++ b/app/src/main/res/layout/row_disposisi_detail_tertanda.xml
@@ -133,6 +133,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:visibility="gone"
             android:background="@color/white"
             android:orientation="horizontal"
             android:layout_width="match_parent"
@@ -179,7 +180,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:background="@color/colorSecondaryBackground"
+            android:background="@color/white"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -225,7 +226,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:background="@color/white"
+            android:background="@color/colorSecondaryBackground"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
