--- a/app/src/main/res/layout/disposisi_riwayat_detail.xml
+++ b/app/src/main/res/layout/disposisi_riwayat_detail.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/swipe_refresh_layout"
+
+<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:font="http://schemas.android.com/apk/res-auto"    >
+    xmlns:font="http://schemas.android.com/apk/res-auto"
+    >
+
+    <include
+        android:id="@+id/tool_bar"
+        layout="@layout/tool_bar"/>
 
     <LinearLayout
         android:orientation="vertical"
@@ -25,12 +31,13 @@
             android:background="@color/white"
             android:layout_height="match_parent">
             <RelativeLayout
+                android:visibility="gone"
                 android:id="@+id/contact_us_header_container"
                 android:layout_width="fill_parent"
-                android:layout_height="@dimen/space_40"
+                android:layout_height="@dimen/space_30"
                 android:layout_alignParentTop="true"
-                android:background="@color/white"
-                android:orientation="horizontal">
+                android:background="@color/grey_s"
+                android:orientation="horizontal">>
                 <ui.CustomtextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -41,7 +48,7 @@
                     android:textStyle="bold"
                     font:name="GOTHAM_BOLD"
                     font:type = "bold"
-                    android:id="@+id/text_folder"
+                    android:id="@+id/view2"
                     android:layout_marginLeft="@dimen/space_10"
                     android:layout_toEndOf="@+id/imageView14"
                     android:layout_alignParentTop="true"
@@ -49,12 +56,6 @@
                     android:layout_alignParentBottom="true"
                     android:gravity="fill_vertical" />
 
-                <ImageView
-                    android:layout_marginRight="@dimen/space_14"
-                    android:layout_alignParentRight="true"
-                    android:src="@drawable/arrow_down"
-                    android:layout_width="@dimen/space_20"
-                    android:layout_height="match_parent" />
             </RelativeLayout>
 
             <View
@@ -72,7 +73,7 @@
                 android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
 
             <RelativeLayout
-                android:visibility="visible"
+                android:visibility="gone"
                 android:id="@+id/layout_download"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -102,5 +103,6 @@
 
 
     </LinearLayout>
+</LinearLayout>
 
-</android.support.v4.widget.SwipeRefreshLayout>
+
