--- a/app/src/main/res/layout/row_persuratan_pribadi.xml
+++ b/app/src/main/res/layout/row_persuratan_pribadi.xml
@@ -87,6 +87,7 @@
                     </RelativeLayout>
 
                     <LinearLayout
+                        android:layout_marginBottom="@dimen/space_7"
                         android:orientation="vertical"
                         android:id="@+id/layout_attachment1"
                         android:layout_width="match_parent"
@@ -136,12 +137,14 @@
                     </LinearLayout>
 
                     <View
+                        android:visibility="gone"
                         android:layout_marginTop="@dimen/space_7"
                         android:background="@color/grey_s"
                         android:layout_width="match_parent"
                         android:layout_height="1dp"/>
 
                     <ui.CustomtextView
+                        android:visibility="gone"
                         android:layout_marginTop="@dimen/space_7"
                         android:layout_marginBottom="@dimen/space_7"
                         font:name = "GOTHAM_LIGHT"
