--- a/app/src/main/res/layout/row_disposisi_riwayat.xml
+++ b/app/src/main/res/layout/row_disposisi_riwayat.xml
@@ -96,24 +96,10 @@
                                 android:layout_height="wrap_content"
                                 android:maxLines="1"
                                 android:layout_marginLeft="@dimen/space_14"
-                                android:layout_alignParentTop="true"
-                                android:layout_toLeftOf="@+id/lbl_nomor"
-                                android:layout_toStartOf="@+id/lbl_nomor" />
+                                android:layout_alignParentTop="true" />
 
-                            <ui.CustomtextView
-                                android:layout_marginTop="@dimen/space_10"
-                                font:name="GOTHAM_LIGHT"
-                                android:id="@+id/lbl_nomor"
-                                android:text="123/123/123"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:maxLines="1"
-                                android:gravity="right"
-                                android:layout_marginRight="@dimen/space_10"
-                                android:layout_alignParentTop="true"
-                                android:layout_alignParentRight="true"
-                                android:layout_alignParentEnd="true" />
                         </RelativeLayout>
+
 
                         <RelativeLayout
                             android:id="@+id/layout_attachment1"
@@ -127,6 +113,7 @@
                             android:layout_marginRight="@dimen/space_5">
 
                             <ui.CustomtextView
+                                android:layout_marginBottom="@dimen/space_5"
                                 android:layout_marginTop="@dimen/space_7"
                                 font:name = "GOTHAM_LIGHT"
                                 android:id="@+id/lbl_Judul"
@@ -142,6 +129,31 @@
 
                         </RelativeLayout>
 
+                        <View
+                            android:background="@color/grey_s"
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"/>
+
+                        <ui.CustomtextView
+                            android:layout_marginLeft="@dimen/space_10"
+                            android:layout_marginRight="@dimen/space_10"
+                            android:layout_marginTop="@dimen/space_5"
+                            android:layout_marginBottom="@dimen/space_5"
+                            font:name="GOTHAM_LIGHT"
+                            android:id="@+id/lbl_nomor"
+                            android:text="123/123/123"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:maxLines="1"
+                            android:gravity="right"
+                            android:layout_alignParentTop="true"
+                            android:layout_alignParentRight="true"
+                            android:layout_alignParentEnd="true" />
+
+                        <View
+                            android:background="@color/grey_s"
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"/>
                         <ui.CustomtextView
                             android:layout_marginBottom="@dimen/space_10"
                             android:layout_marginTop="@dimen/space_10"
