--- a/app/src/main/res/layout/activity_distribusi.xml
+++ b/app/src/main/res/layout/activity_distribusi.xml
@@ -56,7 +56,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
 
-                    <ui.CustomEditText
+                    <ui.CustomtextView
                         android:id="@+id/text_distribusi"
                         android:background="@color/transparant_pure"
                         android:layout_width="match_parent"
